@@ -14,6 +14,7 @@ Date:
 Bug Fixes:
 CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table
 CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
+CAY-2561 Modeler: cgen type combobox doesn't set templates
 
 ----------------------------------
 Release: 4.1.B1
